--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0162.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0162.html
@@ -104,9 +104,9 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1609 367 1878 438" lang="grc">
+        <span id="w_19_0" class="ocr_word" title="bbox 1609 367 1878 438">
           <span class="alternatives">
-            <ins title="nlp 2.00">ῥομπέρτῳ</ins>
+            <ins class="alt" title="nlp 2.00">Ῥομπέρτῳ</ins>
           </span>
         </span>
       </span>
@@ -574,11 +574,6 @@
             <ins class="alt" title="nlp 1.00">ἑαυτὸν</ins>
           </span>
         </span>
-        <span id="w_109" class="ocr_word" title="bbox 1905 1150 1908 1192">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 214 1223 1889 1293">
         <span id="w_110" class="ocr_word" title="bbox 214 1226 534 1291" lang="grc">
@@ -762,11 +757,6 @@
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 1910 1469 2014 1534">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 219 1528 2014 1608">
         <span id="w_148" class="ocr_word" title="bbox 219 1555 276 1584" lang="grc">
@@ -831,14 +821,24 @@
             <ins class="alt" title="nlp 1.00">ἀρχῆς</ins>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 1367 1611 1612 1679" lang="grc">
+        <span id="w_160_0" class="ocr_word" title="bbox 1367 1611 1612 1679">
           <span class="alternatives">
-            <ins title="nlp 2.00">δράξοιτο,</ins>
+            <ins class="alt" title="nlp 2.00">δράξοιτο,</ins>
           </span>
         </span>
-        <span id="w_161" class="ocr_word" title="bbox 1660 1606 2002 1680">
+        <span id="w_160_1" class="ocr_word" title="bbox 1367 1611 1612 1679">
           <span class="alternatives">
-            <ins title="nlp 2.00">γαγγραίνης p. 1</ins>
+            <ins class="alt" title="nlp 2.00">γαγγραίνης</ins>
+          </span>
+        </span>
+        <span id="w_161_0" class="ocr_word" title="bbox 1660 1606 2002 1680">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">P.</ins>
+          </span>
+        </span>
+        <span id="w_161_1" class="ocr_word" title="bbox 1660 1606 2002 1680">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">1</ins>
           </span>
         </span>
       </span>
@@ -855,12 +855,7 @@
         </span>
         <span id="w_165" class="ocr_word" title="bbox 676 1690 959 1756" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διενήνοχεν</ins>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 972 1731 985 1753">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">διενήνοχεν,</ins>
           </span>
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1031 1690 1165 1756" lang="grc">
@@ -1025,7 +1020,7 @@
       <span class="ocr_line" title="bbox 225 2071 1898 2146">
         <span id="w_199" class="ocr_word" title="bbox 490 2077 582 2140" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
+            <ins title="nlp 2.00">(ὡς</ins>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 621 2073 645 2125" lang="grc">
@@ -1421,7 +1416,7 @@
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1772 2701 1904 2767" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρομἐγγίγνεσθαι</ins>
+            <ins title="nlp 2.00">Ρομἐγγίγνεσθαι</ins>
           </span>
         </span>
       </span>
