--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0163.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0163.html
@@ -174,9 +174,14 @@
             <ins class="alt" title="nlp 1.00">ἀφ’</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 919 548 993 594" lang="grc">
+        <span id="w_32_0" class="ocr_word" title="bbox 919 548 993 594">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὦν,</ins>
+            <ins class="alt" title="nlp 2.00">(ἀφ᾿</ins>
+          </span>
+        </span>
+        <span id="w_32_1" class="ocr_word" title="bbox 919 548 993 594">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 1076 567 1142 605" lang="grc">
@@ -197,11 +202,6 @@
         <span id="w_37" class="ocr_word" title="bbox 1523 565 1575 595" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_38" class="ocr_word" title="bbox 1615 544 1816 611" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βένετον</ins>
           </span>
         </span>
       </span>
@@ -441,21 +441,11 @@
         </span>
         <span id="w_86" class="ocr_word" title="bbox 1572 947 1817 998" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συστήσα-</ins>
+            <ins title="nlp 2.00">συστήσασθαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 125 1009 1882 1077">
-        <span id="w_87" class="ocr_word" title="bbox 125 1016 247 1060" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σθαι</ins>
-          </span>
-        </span>
-        <span id="w_88" class="ocr_word" title="bbox 265 1009 495 1077" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πόλεμον.</ins>
-          </span>
-        </span>
         <span id="w_89" class="ocr_word" title="bbox 548 1031 631 1061" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -535,7 +525,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1491 1089 1656 1152" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁποῖα</ins>
+            <ins title="nlp 2.00">(ὁποῖα</ins>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1696 1101 1820 1151" lang="grc">
@@ -1081,9 +1071,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_213" class="ocr_word" title="bbox 366 2174 657 2242" lang="grc">
+        <span id="w_213_0" class="ocr_word" title="bbox 366 2174 657 2242">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ῥομπέερτου</ins>
+            <ins class="alt" title="nlp 2.00">Ῥομπέρτου</ins>
+          </span>
+        </span>
+        <span id="w_213_1" class="ocr_word" title="bbox 366 2174 657 2242">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 697 2181 895 2227" lang="grc">
@@ -1109,11 +1104,6 @@
         <span id="w_218" class="ocr_word" title="bbox 1607 2174 1826 2224" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παντοίῳ</ins>
-          </span>
-        </span>
-        <span id="w_219" class="ocr_word" title="bbox 1850 2190 1891 2223">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">25</ins>
           </span>
         </span>
       </span>
