--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0310.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0310.html
@@ -247,9 +247,14 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 555 691 895 755" lang="grc">
+        <span id="w_46_0" class="ocr_word" title="bbox 555 691 895 755">
           <span class="alternatives">
-            <ins title="nlp 2.00">Δαλαδδηνός.</ins>
+            <ins class="alt" title="nlp 2.00">Δαλασσηνός.</ins>
+          </span>
+        </span>
+        <span id="w_46_1" class="ocr_word" title="bbox 555 691 895 755">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_47" class="ocr_word" title="bbox 973 697 1022 754" lang="grc">
@@ -275,11 +280,6 @@
         <span id="w_51" class="ocr_word" title="bbox 1644 693 1890 757" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Κομάνων</ins>
-          </span>
-        </span>
-        <span id="w_52" class="ocr_word" title="bbox 1911 709 1941 740">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
           </span>
         </span>
       </span>
@@ -346,9 +346,14 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_65" class="ocr_word" title="bbox 692 847 965 914" lang="grc">
+        <span id="w_65_0" class="ocr_word" title="bbox 692 847 965 914">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ῥωμαΐκὰς</ins>
+            <ins class="alt" title="nlp 2.00">Ῥωμαϊκὰς</ins>
+          </span>
+        </span>
+        <span id="w_65_1" class="ocr_word" title="bbox 692 847 965 914">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1003 853 1260 916" lang="grc">
@@ -364,11 +369,6 @@
         <span id="w_68" class="ocr_word" title="bbox 1639 867 1724 898" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_69" class="ocr_word" title="bbox 1748 867 1886 899" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοκράτορα</ins>
           </span>
         </span>
       </span>
@@ -603,9 +603,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 200 1314 1884 1383">
-        <span id="w_116" class="ocr_word" title="bbox 200 1316 520 1382" lang="grc">
+        <span id="w_116_0" class="ocr_word" title="bbox 200 1316 520 1382">
           <span class="alternatives">
-            <ins title="nlp 2.00">περιδφίγξας</ins>
+            <ins class="alt" title="nlp 2.00">περισφίγξας</ins>
+          </span>
+        </span>
+        <span id="w_116_1" class="ocr_word" title="bbox 200 1316 520 1382">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_117" class="ocr_word" title="bbox 560 1336 651 1381" lang="grc">
@@ -631,11 +636,6 @@
         <span id="w_121" class="ocr_word" title="bbox 1416 1314 1597 1382" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἠχῆσαι</ins>
-          </span>
-        </span>
-        <span id="w_122" class="ocr_word" title="bbox 1624 1316 1884 1383" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σάλπιγγα.</ins>
           </span>
         </span>
       </span>
@@ -776,16 +776,11 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1597 1550 1881 1600" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπικαλεσά-</ins>
+            <ins title="nlp 2.00">ἐπικαλεσάμενοι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 198 1627 1884 1693">
-        <span id="w_151" class="ocr_word" title="bbox 198 1646 335 1691" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενοι</ins>
-          </span>
-        </span>
         <span id="w_152" class="ocr_word" title="bbox 374 1632 491 1687" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅλας</ins>
@@ -1206,14 +1201,24 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 195 2405 1934 2474">
-        <span id="w_234" class="ocr_word" title="bbox 195 2423 231 2451">
+        <span id="w_234_0" class="ocr_word" title="bbox 195 2423 231 2451">
           <span class="alternatives">
-            <ins title="nlp 2.00">ᾠ</ins>
+            <ins class="alt" title="nlp 2.00">ᾠ</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 272 2405 486 2467" lang="grc">
+        <span id="w_234_1" class="ocr_word" title="bbox 195 2423 231 2451">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεσίταις</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_235_0" class="ocr_word" title="bbox 272 2405 486 2467">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ᾡ</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 272 2405 486 2467">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μεσίτιας</ins>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 525 2405 714 2466" lang="grc">
@@ -1239,16 +1244,6 @@
         <span id="w_240" class="ocr_word" title="bbox 1370 2406 1670 2472" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χρήσασθαι.</ins>
-          </span>
-        </span>
-        <span id="w_241" class="ocr_word" title="bbox 1734 2413 1877 2456" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
-          </span>
-        </span>
-        <span id="w_242" class="ocr_word" title="bbox 1900 2417 1934 2448">
-          <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
@@ -1377,14 +1372,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_267" class="ocr_word" title="bbox 1314 2638 1584 2705" lang="grc">
+        <span id="w_267_0" class="ocr_word" title="bbox 1314 2638 1584 2705">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ῥωμαΐκῆς</ins>
+            <ins class="alt" title="nlp 2.00">Ῥωμαϊκῆς</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1623 2637 1872 2705" lang="grc">
+        <span id="w_267_1" class="ocr_word" title="bbox 1314 2638 1584 2705">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάλαγγος</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
