--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0311.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0311.html
@@ -836,9 +836,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_161_0" class="ocr_word" title="bbox 954 1771 1004 1819">
+        <span id="w_161_0_0" class="ocr_word" title="bbox 954 1771 1004 1819">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">δι'</ins>
+            <ins class="alt" title="nlp 2.00">δι᾿</ins>
+          </span>
+        </span>
+        <span id="w_161_0_1" class="ocr_word" title="bbox 954 1771 1004 1819">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_161_1" class="ocr_word" title="bbox 954 1771 1004 1819">
@@ -864,11 +869,6 @@
         <span id="w_165" class="ocr_word" title="bbox 1617 1785 1793 1834" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀσκοῦ,</ins>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 1819 1791 1861 1822">
-          <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1237,14 +1237,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_237" class="ocr_word" title="bbox 1484 2387 1659 2437" lang="grc">
+        <span id="w_237_0" class="ocr_word" title="bbox 1484 2387 1659 2437">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μάΐον</ins>
+            <ins class="alt" title="nlp 2.00">Μάϊον</ins>
           </span>
         </span>
-        <span id="w_238" class="ocr_word" title="bbox 1704 2406 1795 2438" lang="grc">
+        <span id="w_237_1" class="ocr_word" title="bbox 1484 2387 1659 2437">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐκ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1435,9 +1435,9 @@
             <ins class="alt" title="nlp 1.00">6</ins>
           </span>
         </span>
-        <span id="w_276" class="ocr_word" title="bbox 1426 2751 1706 2797" lang="grc">
+        <span id="w_276_0" class="ocr_word" title="bbox 1426 2751 1706 2797">
           <span class="alternatives">
-            <ins title="nlp 2.00">θεᾀσασθαι</ins>
+            <ins class="alt" title="nlp 2.00">θεᾴσασθαι</ins>
           </span>
         </span>
       </span>
