--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0314.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0314.html
@@ -737,9 +737,14 @@
             <ins title="nlp 2.00">Ἰωαννάκην</ins>
           </span>
         </span>
-        <span id="w_139" class="ocr_word" title="bbox 891 1490 1041 1556" lang="grc">
+        <span id="w_139_0" class="ocr_word" title="bbox 891 1490 1041 1556">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀνὴρ</ins>
+            <ins class="alt" title="nlp 2.00">(ἀνὴρ</ins>
+          </span>
+        </span>
+        <span id="w_139_1" class="ocr_word" title="bbox 891 1490 1041 1556">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1079 1490 1133 1538" lang="grc">
@@ -760,11 +765,6 @@
         <span id="w_143" class="ocr_word" title="bbox 1570 1510 1652 1540" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_144" class="ocr_word" title="bbox 1679 1490 1918 1556" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φρονήσει</ins>
           </span>
         </span>
       </span>
@@ -972,19 +972,19 @@
             <ins class="alt" title="nlp 1.00">ἐπανέρχεται</ins>
           </span>
         </span>
-        <span id="w_184" class="ocr_word" title="bbox 1106 1879 1284 1926" lang="grc">
+        <span id="w_184_0" class="ocr_word" title="bbox 1106 1879 1284 1926">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μαΐου</ins>
+            <ins class="alt" title="nlp 2.00">Μαΐου</ins>
+          </span>
+        </span>
+        <span id="w_184_1" class="ocr_word" title="bbox 1106 1879 1284 1926">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 1311 1878 1711 1940" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παριππεύοντος</ins>
-          </span>
-        </span>
-        <span id="w_186" class="ocr_word" title="bbox 1742 1878 1914 1943" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μηνός.</ins>
           </span>
         </span>
       </span>
@@ -1306,14 +1306,14 @@
             <ins class="alt" title="nlp 1.00">οὐδ’</ins>
           </span>
         </span>
-        <span id="w_250" class="ocr_word" title="bbox 1704 2442 1771 2471" lang="grc">
+        <span id="w_250_0" class="ocr_word" title="bbox 1704 2442 1771 2471">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὐδ'</ins>
+            <ins class="alt" title="nlp 2.00">οὐδ᾿</ins>
           </span>
         </span>
-        <span id="w_251" class="ocr_word" title="bbox 1811 2426 1915 2486" lang="grc">
+        <span id="w_250_1" class="ocr_word" title="bbox 1704 2442 1771 2471">
           <span class="alternatives">
-            <ins title="nlp 2.00">Δημοσθένης</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1323,9 +1323,14 @@
             <ins class="alt" title="nlp 1.00">ἄλλος</ins>
           </span>
         </span>
-        <span id="w_254" class="ocr_word" title="bbox 697 2520 727 2563" lang="grc">
+        <span id="w_254_0" class="ocr_word" title="bbox 697 2520 727 2563">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἤ</ins>
+            <ins class="alt" title="nlp 2.00">ἢ</ins>
+          </span>
+        </span>
+        <span id="w_254_1" class="ocr_word" title="bbox 697 2520 727 2563">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 768 2519 850 2549" lang="grc">
@@ -1361,11 +1366,6 @@
         <span id="w_261" class="ocr_word" title="bbox 1696 2495 1806 2548" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐδ’</ins>
-          </span>
-        </span>
-        <span id="w_262" class="ocr_word" title="bbox 1847 2519 1915 2549" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἂν</ins>
           </span>
         </span>
       </span>
